--- a/rhai-demo/index.html
+++ b/rhai-demo/index.html
@@ -34,6 +34,7 @@
 </head>
 
 <body>
+    <p><a href="https://github.com/jonathandturner/rhai">Rhai</a> 0.15.1</p>
     <form onSubmit="return false">
         <textarea style="width: 100%; height: 400px;" id="scriptText" spellcheck="false">// --- Demo ---
 
