--- a/rhai-demo/index.html
+++ b/rhai-demo/index.html
@@ -2,59 +2,61 @@
 <html>
 
 <head>
-    <script type="module">
-        import { run_script, default as init } from './wasm_module.js';
-
-        async function run() {
-            await init('./wasm_module_bg.wasm');
-
-            // This makes the functions available to the window context:
-            window.run_script = run_script;
-        }
-
-        run();
-    </script>
-    <script>
-        function btnClick() {
-            let resultEl = document.getElementById('result');
-            resultEl.value = `Running script at ${new Date().toISOString()}\n\n`;
-            try {
-                let result = run_script(document.getElementById('scriptText').value, s => {
-                    resultEl.value += `[PRINT] ${s}\n`;
-                }, s => {
-                    resultEl.value += `[DEBUG] ${s}\n`;
-                });
-                resultEl.value += `\nScript returned: "${result}"`;
-            } catch (ex) {
-                resultEl.value += `\nEXCEPTION: "${ex}"`;
-            }
-            resultEl.value += `\nFinished at ${new Date().toISOString()}`;
-        }
-    </script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>My Rust + Webpack project!</title>
+  <style type="text/css">
+  html, body {
+    height: 100%;
+    margin: 0;
+  }
+  #topContainer {
+    height: 100%;
+    max-height: 100%;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 40px 1fr 1fr;
+  }
+  @media screen and (min-width: 900px) {
+    #topContainer {
+      grid-template-columns: 1fr 1fr;
+      grid-template-rows: 40px 1fr;
+    }
+    #header {
+      grid-column-start: 1;
+      grid-column-end: 3;
+    }
+  }
+  #editorContainer {
+    overflow: hidden;
+  }
+  #result {
+    width: 100%;
+    height: 100%;
+    box-sizing: border-box;
+    margin: 0;
+    resize: none;
+  }
+  .CodeMirror {
+    border: 1px solid #ccc;
+    height: 100% !important;
+    box-sizing: border-box;
+  }
+  </style>
 </head>
 
 <body>
-    <p><a href="https://github.com/jonathandturner/rhai">Rhai</a> 0.15.1</p>
-    <form onSubmit="return false">
-        <textarea style="width: 100%; height: 400px;" id="scriptText" spellcheck="false">// --- Demo ---
-
-fn add(a, b) {
-    a + b
-}
-
-print("Hello world!");
-
-let a = 1;
-let b = 2;
-debug("a = " + a);
-a += 1;
-debug("a = " + a);
-let res = add(a, b);
-debug("res = " + res);
-res // The result is returned.
-</textarea><br>
-        <button type="button" onClick="btnClick()">Run script</button><br>
-        <textarea readonly id="result" style="width: 100%; height: 300px;" autocomplete="off"></textarea>
-    </form>
+  <div id="topContainer">
+    <header id="header">
+      <button type="button" onClick="btnClick()">Run script (<kbd>Ctrl</kbd>+<kbd>Enter</kbd>)</button><br>
+    </header>
+    <div id="editorContainer"></div>
+    <div id="outputContainer">
+      <textarea readonly id="result" style="width: 100%; height: 100%; box-sizing: border-box; margin: 0;"
+        autocomplete="off"></textarea>
+    </div>
+  </div>
+  <script src="index.js"></script>
 </body>
+
 </html>
