Rhai demo: Playground build 184d88e

--- a/rhai-demo/index.html
+++ b/rhai-demo/index.html
@@ -48,7 +48,8 @@
 <body>
   <div id="topContainer">
     <header id="header">
-      <button type="button" onClick="btnClick()">Run script (<kbd>Ctrl</kbd>+<kbd>Enter</kbd>)</button><br>
+      <button type="button" onClick="btnClick()">Run script (<kbd>Ctrl</kbd>+<kbd>Enter</kbd>)</button>
+      <a href="https://github.com/alvinhochun/rhai-playground/commit/184d88e6fb86e18fc525cd24233b77d1898bfa6c">rhai-playground commit 184d88e</a>
     </header>
     <div id="editorContainer"></div>
     <div id="outputContainer">
