Add canonical link

--- a/rhai-demo/index.html
+++ b/rhai-demo/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="refresh" content="0; url=https://alvinhochun.github.io/rhai-playground-unstable/">
+  <link rel="canonical" href="https://alvinhochun.github.io/rhai-playground-unstable/">
   <title>Rhai Playground has moved</title>
 </head>
 
