Point rhai-playground to new location

--- a/rhai-demo/index.html
+++ b/rhai-demo/index.html
@@ -3,15 +3,15 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="refresh" content="0; url=https://alvinhochun.github.io/rhai-playground-unstable/">
-  <link rel="canonical" href="https://alvinhochun.github.io/rhai-playground-unstable/">
+  <meta http-equiv="refresh" content="0; url=https://rhaiscript.github.io/playground/stable/">
+  <link rel="canonical" href="https://rhaiscript.github.io/playground/stable/">
   <title>Rhai Playground has moved</title>
 </head>
 
 <body>
   <p>
     Rhai Playground has moved to <a
-      href="https://alvinhochun.github.io/rhai-playground-unstable/">https://alvinhochun.github.io/rhai-playground-unstable/</a>.
+      href="https://rhaiscript.github.io/playground/stable/">https://rhaiscript.github.io/playground/stable/</a>.
   </p>
 </body>
 
