--- a/rhai-playground-unstable/index.html
+++ b/rhai-playground-unstable/index.html
@@ -3,43 +3,16 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>(Demo) Rhai Playground</title>
-  <link rel="stylesheet" href="https://cdn.materialdesignicons.com/5.3.45/css/materialdesignicons.min.css">
-  <style type="text/css">
-  html, body {
-    height: 100%;
-    margin: 0;
-    overflow: auto !important;
-  }
-  #loading {
-    position: absolute;
-    left: 0;
-    top: 0;
-    bottom: 0;
-    right: 0;
-    padding: 8px;
-  }
-  </style>
-  <noscript>
-    <style>
-      noscript {
-        margin: 8px;
-      }
-      #loading, #topContainer {
-        display: none;
-      }
-    </style>
-  </noscript>
+  <meta http-equiv="refresh" content="0; url=https://rhaiscript.github.io/playground/stable/">
+  <link rel="canonical" href="https://rhaiscript.github.io/playground/stable/">
+  <title>Rhai Playground has moved</title>
 </head>
 
 <body>
-  <noscript>This page requires JavaScript.</noscript>
-  <div id="loading">
-    <div>Loading <a href="https://github.com/alvinhochun/rhai-playground" target="_blank">rhai-playground</a>...</div>
-  </div>
-  <div id="topContainer" class="hidden"></div>
-  <script src="index.js"></script>
+  <p>
+    Rhai Playground has moved to <a
+      href="https://rhaiscript.github.io/playground/stable/">https://rhaiscript.github.io/playground/stable/</a>.
+  </p>
 </body>
 
 </html>
